openshift/berlin-backend-jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The application's http port.
  creationTimestamp: null
  labels:
    application: springboot-demo-jenkins
  name: springboot-demo-jenkins
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment-config.name: springboot-demo-jenkins
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
